[metadata]
name = monet
version = attr: monet.__version__
description = The Model and Observation Evaluation Toolkit (MONET)
long_description = file: README.md
url = https://github.com/noaa-oar-arl/monet
license = MIT
author = Barry D. Baker
author_email = barry.baker@noaa.gov
maintainer = Barry D. Baker
maintainer_email = barry.baker@noaa.gov
keywords = model, verification, hysplit, cmaq, atmosphere, camx, evaluation

[options]
zip_safe = True
packages = find:
include_package_data = True
python_requires = >=3.6
install_requires =
  cartopy
  dask
  matplotlib
  netCDF4  # `netcdf4` on conda-forge; TODO: make optional?
  pydecorate
  pyresample
  pandas
  seaborn
  xarray
  xesmf; platform_system!="Windows"  # TODO: optional?

# [options.extras_require]  # TODO

[options.package_data]
* = data/*.png

[flake8]
max-line-length = 100
ignore =
  E203 # whitespace before ':' - doesn't work well with black
  E402 # module level import not at top of file
  E501 # line too long - let black worry about that
  W503 # line break before binary operator
  E226 # missing whitespace around arithmetic operator
